@@ -13,7 +13,7 @@ possible to add VXI-11 support without modifying the instrument utilities
 themselves.
 
 Each utility takes an instrument name argument which is passed to the
-gpib.c wrappers during initialization.  If it contains a colon, it is 
+gpib.c wrapper initialization function.  If it contains a colon, it is 
 interpreted to be a VXI-11 hostname:logical_device.  Instrument names 
 without colons are passed to linux-gpib to be looked up in /etc/gpib.conf 
 as before.  For example, a native VXI-11 instrument might be called 
@@ -23,7 +23,7 @@ and a direct attachd GPIB meter might be called "meter".
 
 Since gpib-utils is rather unsophisticated in its use of GPIB facilities,
 only the core VXI-11 channel was used.  The abort and intr (SRQ) channels
-were not implemented.
+were not implemented.  VXI-11 device locking is not used.
 
 Note it is possible for gpib-utils to be compiled standalone without
 linux-gpib if only VXI-11 protocol is used to access instruments.
@@ -33,22 +33,30 @@ Special thanks to Jerry Mercola of ICS Electronics (iscelect.com) for
 providing a model 8065 Ethernet-to-GPIB controller as the development 
 platform for adding VXI-11 support to gpib-utils, and to Jay Berg for
 technical advice along the way, especially with the ICSCONFIG RCPL used
-to implement the ics8065 utility.  ICS also publish application notes that 
-were helpful during the process:
+to implement the ics8065 utility.
+
+Jim Garlick
+Nov. 11, 2007
+
+References:
+
+* Model 8065 Ethernet <-> GPIB Controller Instruction Manual,
+  ICS Electronics.
 
 * Frequently Asked Questions (FAQ) For The ICS Model 8065 
-  Ethernet-To-GPIB Controller (AB80-1).
+  Ethernet-To-GPIB Controller, Application Note AB80-1, ICS Electronics.
 
 * VXI-11 RPC Programming Guide for the 8065: An Introduction to
-  RPC Programming (AB80-3).
+  RPC Programming, Application Note AB80-3, ICS Electronics.
 
 * SRQ Handling With a VXI-11 Interrupt Channel On ICS's Model 8065 
-  Ethernet-To-GPIB Controller (AB80-4).
-
-Other references used:
+  Ethernet-To-GPIB Controller, Application Note AB80-4, ICS Electronics.
 
 * VMEbus Extensions for Instrumentation: TCP/IP Instrument Protocol
   Specification VXI-11, Revision 1.0, July 17, 1995.
 
 * Using Linux to Control LXI Instruments Through VXI-11, Application Note
   1465-28, Agilent Technologies.
+
+* Power Programming with RPC, John Bloomer, O'Reilly & Associates, Inc., 
+  1992.
